Add traefik v2 support

--- a/manifests/traefik.yaml
+++ b/manifests/traefik.yaml
@@ -4,9 +4,7 @@ metadata:
   name: traefik
   namespace: kube-system
 spec:
-  chart: https://%{KUBERNETES_API}%/static/charts/traefik-1.81.0.tgz
+  chart: https://containous.github.io/traefik-helm-chart/traefik-6.1.1.tgz
   set:
-    rbac.enabled: "true"
-    ssl.enabled: "true"
-    metrics.prometheus.enabled: "true"
-    kubernetes.ingressEndpoint.useDefaultPublishedService: "true"
+    additionalArguments:
+      - "--metrics.prometheus"
